<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/prompt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/dialog_logout"
        android:textSize="@dimen/font_15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e7e7e7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prompt_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/action_logout"
            android:textColor="@color/grapefruit"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#e7e7e7"/>

        <Button
            android:id="@+id/prompt_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/action_logout_cancel"
            android:textColor="@color/gray_dark"/>
    </LinearLayout>

</LinearLayout>